Archive/6e097c0ea5beffe7ccaf5cac7c3c9b5c-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:20:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:20:1: error: expected ';' before '}' token
